--- a/client/index.html
+++ b/client/index.html
@@ -13,5 +13,12 @@
         <header>
             <h1>🎈Save the Emojis🎈</h1>
         </header>
+        <main>
+            <section>
+                <h2>Save the Emojis</h2>
+                <p>Every day dozens of emojis are left forgotten and unused.
+                    Together we can help them thrive.</p>
+            </section>
+        </main>
     </body>
 </html>
