landing page UI updates

--- a/client/index.html
+++ b/client/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="https://fonts.googleapis.com/css?family=Days+One|Open+Sans"
+        <link
+            href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans|Raleway:400,900"
             rel="stylesheet">
         <link rel="stylesheet" href="styles/index.css">
+        <link rel="stylesheet" href="styles/landing.css">
         <title>🎈Save the Emojis🎈</title>
     </head>
     <body>
@@ -14,10 +16,16 @@
             <h1>🎈Save the Emojis🎈</h1>
         </header>
         <main>
-            <section>
+            <section class="page-header">
                 <h2>Save the Emojis</h2>
+                <hr />
                 <p>Every day dozens of emojis are left forgotten and unused.
                     Together we can help them thrive.</p>
+            </section>
+            <section class="link-cards">
+                <div class="card"><h3>Sign Up</h3></div>
+                <div class="card"><h3>Donate</h3></div>
+                <div class="card"><h3>Stats</h3></div>
             </section>
         </main>
     </body>
