update landing page

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,14 @@
         <title>🎈Save the Emojis🎈</title>
     </head>
     <body>
+        <div class="bg">
+            <div class="img">
+
+
+            </div>
+
+
+        </div>
         <header>
             <h1>🎈Save the Emojis🎈</h1>
         </header>
@@ -23,9 +31,18 @@
                     Together we can help them thrive.</p>
             </section>
             <section class="link-cards">
-                <div class="card"><h3>Sign Up</h3></div>
-                <div class="card"><h3>Donate</h3></div>
-                <div class="card"><h3>Stats</h3></div>
+                <div class="card-container">
+                    <h3>Sign Up</h3>
+                    <div class="emoji-card">📝</div>
+                </div>
+                <div class="card-container">
+                    <h3>Donate</h3>
+                    <div class="emoji-card">💸</div>
+                </div>
+                <div class="card-container">
+                    <h3>Stats</h3>
+                    <div class="emoji-card">📊</div>
+                </div>
             </section>
         </main>
     </body>
