--- a/client/index.html
+++ b/client/index.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link
-            href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans|Raleway:400,900"
-            rel="stylesheet">
-        <link rel="stylesheet" href="styles/index.css">
-        <link rel="stylesheet" href="styles/landing.css">
-        <title>🎈Save the Emojis🎈</title>
-    </head>
-    <body>
-        <div class="bg">
-            <div class="img">
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>🎈 Save the Emojis! ❤️</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway:400,900" rel="stylesheet">
+  <link rel="stylesheet" href="styles/index.css" >
+  <link rel="stylesheet" href="styles/landing.css" >
+</head>
+<body>
+  <div class="bg">
+    <div class="img">
 
-
-            </div>
-
-
+    </div>
+  </div>
+  <header>
+    <h2><a href="/">🎈 Save the Emojis! ❤️</a></h2>
+  </header>
+  <main>
+    <section class="page-header">
+      <h2>Save the Emojis</h2>
+      <hr>
+      <p>Every day dozens of emojis are left forgotten and unused. Together we can help them thrive.</p>
+    </section>
+    <section class="link-cards">
+      <div class="card-container">
+        <a href="sign-up.html">
+          <h3>Sign-up</h3>
+          <div class="emoji-card">
+            📝
+          </div>
+        </a>
+      </div>
+      <div class="card-container">
+        <h3>Donate</h3>
+        <div class="emoji-card">
+          💸
         </div>
-        <header>
-            <h1>🎈Save the Emojis🎈</h1>
-        </header>
-        <main>
-            <section class="page-header">
-                <h2>Save the Emojis</h2>
-                <hr />
-                <p>Every day dozens of emojis are left forgotten and unused.
-                    Together we can help them thrive.</p>
-            </section>
-            <section class="link-cards">
-                <div class="card-container">
-                    <h3>Sign Up</h3>
-                    <div class="emoji-card">📝</div>
-                </div>
-                <div class="card-container">
-                    <h3>Donate</h3>
-                    <div class="emoji-card">💸</div>
-                </div>
-                <div class="card-container">
-                    <h3>Stats</h3>
-                    <div class="emoji-card">📊</div>
-                </div>
-            </section>
-        </main>
-    </body>
+      </div>
+      <div class="card-container">
+        <a href="stats.html">
+          <h3>Stats</h3>
+          <div class="emoji-card">
+            📊
+          </div>
+        </a>
+      </div>
+    </section>
+  </main>
+</body>
 </html>
